tests/driver/T21097/T21097.stderr

Test.hs:3:1: error: [GHC-87110]
    Could not load module ‘Foo’.
    It is a member of the package ‘c-0.1’
    which is unusable due to missing dependencies:
      d-0.1
    It is reexported from the package ‘b-0.1’
    which is unusable due to missing dependencies:
      c-0.1
    It is reexported from the package ‘a-0.1’
    which is unusable due to missing dependencies:
      c-0.1
    Use -v to see a list of the files searched for.
  |
3 | import Foo
  | ^^^^^^^^^^
